# xiaomi-flashable-firmware-creator

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  README.md  app.py  app.ui  create_flashable_firmware.py  create_flashable_firmware.sh  create_flashable_firmware.spec  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
data/: settings.json  translations.json
helpers/: language.py  settings.py
i18n/: ar.qm  ar.ts  ca.qm  cs.qm  de-DE.qm  de.qm  en_US.qm  en_US.ts  es-ES.qm  fr.qm  he.qm  hi.qm  hr.qm  id.qm  it.qm  ms.qm  pl.qm  ro.qm  sq.qm  tr-TR.qm  tr.qm  uk.qm  vi.qm
i18n/develop/: extact_lang.sh  lang.ts
i18n/develop/af/: af.ts
i18n/develop/ar/: ar.ts
i18n/develop/bn/: bn.ts
i18n/develop/bn-IN/: bn-IN.ts
i18n/develop/ca/: ca.ts
i18n/develop/de/: de.ts
i18n/develop/es-ES/: es-ES.ts
i18n/develop/fi/: fi.ts
i18n/develop/ga-IE/: ga-IE.ts
i18n/develop/he/: he.ts
i18n/develop/hi/: hi.ts
i18n/develop/hr/: hr.ts
i18n/develop/id/: id.ts
i18n/develop/it/: it.ts
i18n/develop/ko/: ko.ts
i18n/develop/ms/: ms.ts
i18n/develop/ne-NP/: ne-NP.ts
i18n/develop/nl/: nl.ts
i18n/develop/no/: no.ts
i18n/develop/ro/: ro.ts
i18n/develop/ru/: ru.ts
i18n/develop/sk/: sk.ts
i18n/develop/sl/: sl.ts
i18n/develop/uk/: uk.ts
windows/: about.py
xiaomi_flashable_firmware_creator/: __init__.py  __main__.py  create_flashable_firmware.py  firmware_creator.py  main.py  types.py  xiaomi_flashable_firmware_creator.py
xiaomi_flashable_firmware_creator/extractors/: __init__.py  base_extractor.py  local_extractor.py  local_zip_extractor.py  remote_extractor.py  remote_zip_extractor.py  zip_extractor.py
xiaomi_flashable_firmware_creator/extractors/handlers/: android_one_zip.py  base_handler.py  payload_zip.py  standard_zip.py
xiaomi_flashable_firmware_creator/helpers/: __init__.py  misc.py  mock_zip.py  settings.py
xiaomi_flashable_firmware_creator/i18n/: ar.qm  bn-IN.qm  bn.qm  ca.qm  cs.qm  de.qm  el.qm  en_US.qm  es-ES.qm  fa.qm  fr.qm  ga-IE.qm  he.qm  hi.qm  hr.qm  hy-AM.qm  id.qm  it.qm  ja.qm  ko.qm  ms.qm  nl.qm  pl.qm  pt-BR.qm  pt-PT.qm  ro.qm  ru.qm  sk.qm  sl.qm  sq.qm  sr.qm  tr.qm  uk.qm  ur-PK.qm  vi.qm  zh-CN.qm
xiaomi_flashable_firmware_creator/i18n/develop/af/: af.ts
xiaomi_flashable_firmware_creator/i18n/develop/ar/: ar.ts
xiaomi_flashable_firmware_creator/i18n/develop/bn/: bn.ts
xiaomi_flashable_firmware_creator/i18n/develop/bn-IN/: bn-IN.ts
xiaomi_flashable_firmware_creator/i18n/develop/ca/: ca.ts
xiaomi_flashable_firmware_creator/i18n/develop/cs/: cs.ts
xiaomi_flashable_firmware_creator/i18n/develop/da/: da.ts
xiaomi_flashable_firmware_creator/i18n/develop/de/: de.ts
xiaomi_flashable_firmware_creator/i18n/develop/el/: el.ts
xiaomi_flashable_firmware_creator/i18n/develop/en/: en.ts
xiaomi_flashable_firmware_creator/i18n/develop/es-ES/: es-ES.ts
xiaomi_flashable_firmware_creator/i18n/develop/fa/: fa.ts
xiaomi_flashable_firmware_creator/i18n/develop/fi/: fi.ts
xiaomi_flashable_firmware_creator/i18n/develop/fr/: fr.ts
xiaomi_flashable_firmware_creator/i18n/develop/ga-IE/: ga-IE.ts
xiaomi_flashable_firmware_creator/i18n/develop/he/: he.ts
xiaomi_flashable_firmware_creator/i18n/develop/hi/: hi.ts
xiaomi_flashable_firmware_creator/i18n/develop/hr/: hr.ts
xiaomi_flashable_firmware_creator/i18n/develop/hu/: hu.ts
xiaomi_flashable_firmware_creator/i18n/develop/hy-AM/: hy-AM.ts
xiaomi_flashable_firmware_creator/i18n/develop/id/: id.ts
xiaomi_flashable_firmware_creator/i18n/develop/it/: it.ts
xiaomi_flashable_firmware_creator/i18n/develop/ja/: ja.ts
xiaomi_flashable_firmware_creator/templates/: partition_flashing  recovery_ab_update-binary  recovery_ab_updater_script  recovery_updater_script  recovery_updater_script.txt
xiaomi_flashable_firmware_creator/tests/: __init__.py  test_creator.py  test_misc.py
(+33 files in other folders)
