[tool.poetry]
name = "xiaomi_flashable_firmware_creator"
version = "2.2.12"
description = "Create flashable firmware zip from MIUI Recovery ROMs!"
authors = ["yshalsager <ysh-alsager@hotmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator/"
homepage = "https://xiaomifirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
keywords = ["xiaomi", "firmware", "android"]
packages = [
    { include = "xiaomi_flashable_firmware_creator" }
]
include = [
    "README.md",
    "pyproject.toml"
]
exclude = ["xiaomi_flashable_firmware_creator/tests"]
readme = "README.md"

[tool.poetry.scripts]
xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_flashable_firmware_creator:main"

[tool.poetry.dependencies]
python = "^3.10"
remotezip = ">=0.9.2,<0.13.0"
protobuf = ">=3.15,<4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
[tool.black]
include = '(xiaomi_flashable_firmware_creator\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
  | ota_payload_extractor
  | updater-scripts
  | binaries
  | files
  | templates
)/
'''

[tool.isort]
profile = "black"

