[project]
name = "xiaomi_flashable_firmware_creator"
version = "2.2.14"
description = "Create flashable firmware zip from MIUI and HyperOS Recovery ROMs!"
authors = [{ name = "yshalsager", email = "contact@yshalsager.com" }]
license-files = ["LICENSE"]
keywords = ["xiaomi", "firmware", "android"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["remotezip>=0.12.3", "protobuf>=4.22.1,<6.0.0"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[tool.uv]
package = true

[project.urls]
homepage = "https://xmfirmwareupdater.com/projects/xiaomi-flashable-firmware-creator/"
repository = "https://github.com/XiaomiFirmwareUpdater/xiaomi-flashable-firmware-creator/"

[project.scripts]
xiaomi_flashable_firmware_creator = "xiaomi_flashable_firmware_creator.xiaomi_flashable_firmware_creator:main"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.22,<0.9.0"]

[tool.uv.build-backend]
module-root = ""
module-name = "xiaomi_flashable_firmware_creator"
source-include = ["templates/**", "binaries/**"]

[tool.ruff]
fix = true
src = ["xiaomi_flashable_firmware_creator"]
target-version = "py313"
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
